Fix: WPAPP - Date filter at top of some CPT lists was set to something way way too narrow.  Now set to min 100px.

--- a/includes/core/apps/wordpress-app/assets/css/wpcd-wpapp-admin-app.css
+++ b/includes/core/apps/wordpress-app/assets/css/wpcd-wpapp-admin-app.css
@@ -173,6 +173,7 @@
 
 .tablenav .actions:not(.bulkactions) select {
     width: 13%;
+	min-width: 100px;
     margin-bottom: 10px;
 }
 
